--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<img src="images/banner.png" alt="We are hiring @Edgewell" width="300">
 					<h3>E-mail Template Edgewell Personal Care | HTML, CSS</h3>
 					<p>Automatizovaná e-mailová kampaň; krátké představení firmy, firemní hodnoty a přehled otevřených pozic.</p>
-					<a class="btn" href="#" target="_blank">GitHub</a>
+					<a class="btn" href="https://github.com/Julie-JK/Email-Template-EPC.git" target="_blank">GitHub</a>
 				</section>
 
 				<!-- Project 2 -->
@@ -38,7 +38,7 @@
 					<img src="images/slide.jpg" alt="slide">
 					<h3>Slider evropských měst | HTML, CSS, Javascript</h3>
 					<p>Dechberoucí pohledy 5 nejkrásnějších měst Evropy. Kouzelná Praha, moderní Berlín, romantická Paříž, také uvidíme klasický gotický kostel ve Vídni a nechybí tady ani londýnský Big Ben.</p>
-					<a class="btn" href="#" target="_blank">GitHub</a>
+					<a class="btn" href="https://github.com/Julie-JK/slides-html-css-js.git" target="_blank">GitHub</a>
 				</section>
 
 				<!-- Project 3 -->
@@ -46,7 +46,7 @@
 					<img src="images/upandown.jpg" alt="slideupdown">
 					<h3>Slider up and down | HTML, CSS, Javascript</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at lacus eget massa pellentesque lobortis vitae sit amet mauris. Aenean nec urna nec risus interdum gravida sed ac turpis.</p>
-					<a class="btn" href="#" target="_blank">GitHub</a>
+					<a class="btn" href="https://github.com/Julie-JK/up-and-down-html-css-js.git" target="_blank">GitHub</a>
 				</section>
 			</div>
 		</section>
